--- a/angular.json
+++ b/angular.json
@@ -25,12 +25,26 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/vendors/ti-icons/css/themify-icons.css",
+              "src/assets/vendors/base/vendor.bundle.base.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.slim.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/vendors/base/vendor.bundle.base.js",
+              "src/assets/js/chart.js",
+              "src/assets/js/dashboard.js",
+              "src/assets/js/documentation.js",
+              "src/assets/js/file-upload.js",
+              "src/assets/js/hoverable-collapse.js",
+              "src/assets/js/off-canvas.js",
+              "src/assets/js/tabs.js",
+              "src/assets/js/template.js",
+              "src/assets/js/todolist.js",
+              "src/assets/js/tooltips.js",
+              "src/assets/vendors/chart.js/Chart.min.js"
             ]
           },
           "configurations": {
